add link between city and distance

--- a/src/main/resources/liquibase/migrations/create_index_for_distance.yaml
+++ b/src/main/resources/liquibase/migrations/create_index_for_distance.yaml
@@ -6,9 +6,9 @@ databaseChangeLog:
         - createIndex:
             columns:
               - column:
-                  name: from_city
+                  name: from_id
               - column:
-                  name: to_city
+                  name: to_id
             indexName: idx_distance
             schemaName: distance-calculator
             tableName: distance
